tests/snapshots/test__from_fixtures@type__basic.json.snap
---
source: tests/test.rs
expression: diff
input_file: tests/fixtures/type/basic.json
---
[
    Change {
        path: "",
        change: TypeRemove {
            removed: String,
        },
    },
    Change {
        path: "",
        change: TypeAdd {
            added: Number,
        },
    },
    Change {
        path: "",
        change: TypeAdd {
            added: Integer,
        },
    },
]
