tests/snapshots/test__from_fixtures@type__extend_from_const.json.snap
---
source: tests/test.rs
expression: diff
info:
  lhs:
    const: hello
  rhs:
    type:
      - string
input_file: tests/fixtures/type/extend_from_const.json
---
[]
