tests/snapshots/test__from_fixtures@type__extend_type.json.snap
---
source: tests/test.rs
expression: diff
info:
  lhs:
    type: string
  rhs:
    type:
      - string
      - number
input_file: tests/fixtures/type/extend_type.json
---
[
    Change {
        path: "",
        change: TypeAdd {
            added: Number,
        },
    },
    Change {
        path: "",
        change: TypeAdd {
            added: Integer,
        },
    },
]
