tests/snapshots/test__from_fixtures@type__integer_to_number.json.snap
---
source: tests/test.rs
expression: diff
input_file: tests/fixtures/type/integer_to_number.json
---
[
    Change {
        path: "",
        change: TypeAdd {
            added: Number,
        },
    },
]
