tests/snapshots/test__from_fixtures@type__nothing.json.snap
---
source: tests/test.rs
expression: diff
info:
  lhs:
    type: string
  rhs:
    type: string
input_file: tests/fixtures/type/nothing.json
---
[]
