tests/snapshots/test__from_fixtures@type__number_to_integer.json.snap
---
source: tests/test.rs
expression: diff
input_file: tests/fixtures/type/number_to_integer.json
---
[
    Change {
        path: "",
        change: TypeRemove {
            removed: Number,
        },
    },
]
