tests/snapshots/test__from_fixtures@type__restrict_to_const.json.snap
---
source: tests/test.rs
expression: diff
info:
  lhs:
    type:
      - string
  rhs:
    const: hello
input_file: tests/fixtures/type/restrict_to_const.json
---
[]
